use min-height instead of fixed height to avoid image overlapping text when screen gets small

--- a/app/styles/includes/_section.scss
+++ b/app/styles/includes/_section.scss
@@ -42,7 +42,7 @@
 
 .subsection-description {
   margin-top: 2em;
-  height: 120px;
+  min-height: 120px;
 }
 
 .subsection-star-container {
